--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "framer-motion": "^12.23.9",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.535.0",
     "next": "^15.4.5",
@@ -67,6 +69,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.61.1",
+    "react-i18next": "^15.7.2",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.7.4",
